Fixed Alignment

--- a/Quickstart.module.scss
+++ b/Quickstart.module.scss
@@ -1,6 +1,6 @@
 .page_content{
     padding-left: 42px;
-    width: 66%;
+    width: 68%;
     border-left: 2px solid var(--app-sidebar-border-color);
     color: #333333;
     
@@ -140,7 +140,6 @@
   .card {
     border-radius: 6px;
     background-color: #1d1f20;
-    width: 83.5rem;
   
     &_header {
       display: flex;
