--- a/index.scss
+++ b/index.scss
@@ -27,7 +27,7 @@ body {
   overflow-x: hidden;
 }
 .doc-content{
-  padding: 188px 0px 80px;
+  padding: 188px 80px;
   display: flex;
   min-height: 95vh;
   justify-content: center;
@@ -1012,6 +1012,6 @@ textarea {
 
 [data-state~="responsive.laptop"]{
     .doc-content{
-      padding: 175px 0 80px;
+      padding: 188px 50px;
     }
 }
